kubernetes/apps/media/sonarr/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://sonarr.default.internal.javiersant.com"
    gethomepage.dev/description: TV Series manager for usenet and torrent users.
    gethomepage.dev/group: Media
    gethomepage.dev/icon: sonarr.svg
    gethomepage.dev/name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: sonarr
          port: 80
  tls:
    secretName: wildcard-javiersant-com-tls
